# BillSplitter

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: orders.py  splits.py  users.py
backend/services/: llm_service.py  ocr_service.py  sms_service.py  storage_service.py
backend/tests/: test_ocr.py  test_sms.py
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/components/: ItemAssignment.tsx  ParsedReceipt.tsx  ReceiptUpload.tsx  SplitReview.tsx
frontend/app/orders/: page.tsx
frontend/app/users/: page.tsx
